tests/cases/fail/no_matching_overload.p4
def show(x: int) -> int:
    return x

def show(x: float) -> float:
    return x

def main() -> None:
    print(show("hello"))
